    is defined.  (Thanks to Elliott Hughes for reporting the problem.)

    'zic' no longer mishandles input when ignoring case in locales that
    are not compatible with English, e.g., unibyte Turkish locales when
    compiled with HAVE_GETTEXT.

    Error diagnostics of 'zic' and 'yearistype' have been reworded so that
    they no longer use ASCII '-' as if it were a dash.

    'zic -v' now warns about output file names that do not follow
    POSIX rules, or that contain a digit or '.'.  (Thanks to Arthur
    David Olson for starting the ball rolling on this.)

    Some lint has been removed when using GCC_DEBUG_FLAGS with GCC 4.9.0.

  Changes affecting documentation and commentary

    The 'Theory' file documents legacy names, the longstanding
    exceptions to the POSIX-inspired file name rules.

    Documentation and commentary now prefer UTF-8 to US-ASCII,
    allowing the use of proper accents in foreign words and names.
    Code and data have not changed because of this.  (Thanks to
    Garrett Wollman, Ian Abbott, and Guy Harris for helping to debug
    this.)

    Non-HTML documentation and commentary now use plain-text URLs instead of
    HTML insertions, and are more consistent about bracketing URLs when they
    are not already surrounded by white space.  (Thanks to suggestions by
    Steffen Nurpmeso.)

    In zone.tab, Pacific/Easter no longer mentions Salas y G?mez, as it
    is uninhabited.

    Commentary about permanent Antarctic bases has been updated.

    Several typos have been corrected.  (Thanks to Tim Parenti for
    contributing some of these fixes.)

    The files usno1988, usno1989, usno1989a, usno1995, usno1997, and usno1998
    have been removed.  These obsolescent US Naval Observatory entries were no
    longer helpful for maintenance.  (Thanks to Tim Parenti for the suggestion.)


Release 2014e - 2014-06-12 21:53:52 -0700

  Changes affecting near-future time stamps
